--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Template Landing Page</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="navbar">
+            <h1>Header Logo</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Home</a>
+                <a href="#">Home</a>
+            </nav>
+        </div>
+    </header>
+
+    <footer>Copyright &copy PentaZoned</footer>
 </body>
 </html>
