--- a/index.html
+++ b/index.html
@@ -11,14 +11,27 @@
 <body>
     <header>
         <div class="navbar">
-            <h1>Header Logo</h1>
+            <span class="logo">Header Logo</span>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Home</a>
-                <a href="#">Home</a>
+                <a href="#">Header Link #1</a>
+                <a href="#">Header Link #2</a>
+                <a href="#">Header Link #3</a>
             </nav>
         </div>
+
+        <div class="hero-content">
+            <div>
+                <p class="hero-main-text">This website is awesome</p>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <img src="placeholder.png" alt="placeholder image" loading="lazy">
+        </div>
     </header>
+
+    <main>
+
+    </main>
 
     <footer>Copyright &copy PentaZoned</footer>
 </body>
