--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./normalize.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
+
 <body>
     <header>
         <div class="navbar">
@@ -22,7 +24,8 @@
         <div class="hero-content">
             <div>
                 <p class="hero-main-text">This website is awesome</p>
-                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is a lower contrast.</p>
                 <button class="hero-button">Sign up</button>
             </div>
             <img src="placeholder.png" alt="placeholder image" loading="lazy">
@@ -30,9 +33,60 @@
     </header>
 
     <main>
+        <section>
+            <h1>
+                Some random information
+            </h1>
+            <figure>
+                <img src="https://via.placeholder.com/150">
+                <div>
+                    this is some subtext under an illustration or image
+                </div>
+            </figure>
+            <figure>
+                <img src="https://via.placeholder.com/150">
+                <div>
+                    this is some subtext under an illustration or image
+                </div>
+            </figure>
+            <figure>
+                <img src="https://via.placeholder.com/150">
+                <div>
+                    this is some subtext under an illustration or image
+                </div>
+            </figure>
+            <figure>
+                <img src="https://via.placeholder.com/150">
+                <div>
+                    this is some subtext under an illustration or image
+                </div>
+            </figure>
+        </section>
 
+        <section>
+            <p>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who Knows? All I know is that it looks nice.
+            </p>
+            <p>
+                -Thor, God of Thunder
+            </p>
+        </section>
+
+        <section>
+            <div>
+                <p>
+                    Call to action! It's time!
+                </p>
+                <p>
+                    Sign up for our product by clicking that button right over there!
+                </p>
+            </div>
+            <button>Sign Up</button>
+        </section>
     </main>
 
-    <footer>Copyright &copy PentaZoned</footer>
+    <footer>Copyright &copy PentaZoned 2022</footer>
 </body>
+
 </html>
