completed random main content section

--- a/index.html
+++ b/index.html
@@ -28,39 +28,41 @@
                     smaller font and the color is a lower contrast.</p>
                 <button class="hero-button">Sign up</button>
             </div>
-            <img src="placeholder.png" alt="placeholder image" loading="lazy">
+            <img src="https://via.placeholder.com/400" alt="placeholder image" loading="lazy">
         </div>
     </header>
 
     <main>
-        <section>
-            <h1>
+        <section class="section-padding">
+            <h1 class="text-center">
                 Some random information
             </h1>
-            <figure>
-                <img src="https://via.placeholder.com/150">
-                <div>
-                    this is some subtext under an illustration or image
-                </div>
-            </figure>
-            <figure>
-                <img src="https://via.placeholder.com/150">
-                <div>
-                    this is some subtext under an illustration or image
-                </div>
-            </figure>
-            <figure>
-                <img src="https://via.placeholder.com/150">
-                <div>
-                    this is some subtext under an illustration or image
-                </div>
-            </figure>
-            <figure>
-                <img src="https://via.placeholder.com/150">
-                <div>
-                    this is some subtext under an illustration or image
-                </div>
-            </figure>
+            <div class="image-and-caption">
+                <figure>
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <div>
+                        this is some subtext under an illustration or image
+                    </div>
+                </figure>
+                <figure>
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <div>
+                        this is some subtext under an illustration or image
+                    </div>
+                </figure>
+                <figure>
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <div>
+                        this is some subtext under an illustration or image
+                    </div>
+                </figure>
+                <figure>
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <div>
+                        this is some subtext under an illustration or image
+                    </div>
+                </figure>
+            </div>
         </section>
 
         <section>
