--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             </div>
         </section>
 
-        <section>
-            <p>
+        <section class="section-padding quote-section">
+            <p class="quote">
                 This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
                 people will actually read it. Who Knows? All I know is that it looks nice.
             </p>
-            <p>
+            <p class="quote-author">
                 -Thor, God of Thunder
             </p>
         </section>
