added call-to-action/sign-up section

--- a/index.html
+++ b/index.html
@@ -39,25 +39,29 @@
             </h1>
             <div class="image-and-caption">
                 <figure>
-                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image"
+                        loading="lazy">
                     <div>
                         this is some subtext under an illustration or image
                     </div>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image"
+                        loading="lazy">
                     <div>
                         this is some subtext under an illustration or image
                     </div>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image"
+                        loading="lazy">
                     <div>
                         this is some subtext under an illustration or image
                     </div>
                 </figure>
                 <figure>
-                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image" loading="lazy">
+                    <img src="https://via.placeholder.com/150" class="image-styling" alt="placeholder image"
+                        loading="lazy">
                     <div>
                         this is some subtext under an illustration or image
                     </div>
@@ -76,15 +80,17 @@
         </section>
 
         <section>
-            <div>
-                <p>
-                    Call to action! It's time!
-                </p>
-                <p>
-                    Sign up for our product by clicking that button right over there!
-                </p>
+            <div class="sign-up">
+                <div class="sign-up-message">
+                    <p class="call-to-action">
+                        Call to action! It's time!
+                    </p>
+                    <p>
+                        Sign up for our product by clicking that button right over there!
+                    </p>
+                </div>
+                <button class="sign-up-button">Sign Up</button>
             </div>
-            <button>Sign Up</button>
         </section>
     </main>
 
